<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:weightSum="10"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="@drawable/gradiant_animacion"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="1.7"
        android:layout_height="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:src="@drawable/tituloblanco" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_iconomuscle" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="top"
        android:layout_marginTop="16dp"
        android:layout_weight="5"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <EditText
            android:hint="@string/emailReg"
            android:textColorHint="@color/gray"
            android:id="@+id/TextEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/passwordReg"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:id="@+id/TextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnregistro"
            android:textAllCaps="false"
            android:background="@drawable/botonblanco"
            android:text="@string/registro"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>